# mantra-dex-sdk

./: .env  .env.example  .env.mcp.example  .env.test  .gitignore  AI_AGENT_PROMPT.md  CLAUDE.md  Cargo.toml  FOCUS_FIXES.md  IMPLEMENTATION_SUMMARY.md  MCP_COMPLETION_SUMMARY.md  MCP_USAGE_GUIDE.md  NAVIGATION_FIXES.md  RATATUI_TASKS.md  README.md  SDK_ADAPTER_IMPLEMENTATION_TASKS.md  SDK_ADAPTER_TASK_PROMPT.md  TEST_REFACTOR_PLAN.md  TOP_10_CRITICAL_TESTS.md  WALLET_PERSISTENCE_IMPLEMENTATION_TASKS.md  WALLET_PERSISTENCE_PRD.md  WALLET_PERSISTENCE_TASKS.md  backward_compatibility_removal_tasks.md  build_output.txt  example_usage.rs  pr_comments_tasks.md  run_script.sh  test_analysis_by_importance.md
.cargo/: config.toml
.cursor/rules/: blockchain-integration.mdc  development-workflow.mdc  focus-navigation.mdc  mcp-compilation.mdc  project-overview.mdc  swap-navigation.mdc  testing-guidelines.mdc  troubleshooting-guide.mdc  tui-architecture.mdc
cli/: Cargo.toml  README.md  config.toml.example
cli/src/: config.rs  error.rs  main.rs  utils.rs
cli/src/commands/: balance.rs  liquidity.rs  mod.rs  pool.rs  swap.rs  wallet.rs
config/: contracts.toml  mcp.toml  network.toml  test.toml.example
examples/: tui_demo.rs
scripts/: test_basic_swap.md  test_complex_scenario.md  test_liquidity_provision.md  test_network_validation.md  test_pool_creation.md
server/: shared.rs
src/: claimdrop.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  skip_adapter.rs  wallet.rs
src/mcp/: .env  CURSOR_INTEGRATION_GUIDE.md  MCP_TOOL_REMOVAL_TASKS.md  MCP_USER_GUIDE.md  PRD.md  PROMPT.md  README.md  TASKS.md  client_wrapper.rs  logging.rs  mod.rs  prompt.md  script_parser.rs  script_runner.rs  sdk_adapter.rs  server.rs
src/mcp/scripts/: test_basic_swap.md  test_complex_scenario.md  test_liquidity_provision.md  test_network_validation.md
src/tui/: README.md  app.rs  event.rs  events.rs  mod.rs  tasks.md  ui.rs
src/tui/components/: charts.rs  forms.rs  header.rs  mod.rs  modals.rs  navigation.rs  password_input.rs  password_prompt.rs  simple_list.rs  status_bar.rs  tables.rs  wallet_save_modal.rs
src/tui/screens/: admin.rs  dashboard.rs  liquidity.rs  mod.rs  multihop.rs  pools.rs  rewards.rs  settings.rs  swap.rs  transaction.rs  wallet_selection.rs  wizard.rs
src/tui/tests/: app_tests.rs  event_tests.rs  mod.rs  ui_tests.rs
src/tui/utils/: async_ops.rs  focus_manager.rs  formatting.rs  logger.rs  mod.rs  responsive.rs  validation.rs
src/wallet/: mod.rs  storage.rs
tests/: client_test.rs  config_test.rs  constants.rs  critical_tests.rs  farm_manager_test.rs  feature_toggle_test.rs  fee_validation_test.rs  integration_test.rs  mcp_integration_test.rs  mcp_protocol_compliance.rs  migration_validation_test.rs  multi_wallet_test.rs  pool_status_test.rs  skip_adapter_tests.rs  slippage_validation_test.rs  swap_test.rs  utils.rs  wallet_test.rs
tui/: Cargo.toml  README.md
tui/src/: app.rs  config.rs  error.rs  main.rs  ui.rs  utils.rs
