[package]
name = "mantra-dex-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with the Mantra DEX on the Mantra Dukong Network"
license = "MIT"

[[bin]]
name = "mantra-dex-tui"
path = "src/bin/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"


[package.metadata.commands]
tui = "cargo run --bin mantra-dex-tui --features tui"

[features]
default = []
tui = [
    "ratatui",
    "crossterm",
    "tokio-util",
    "tui-input",
    "chrono",
    "env_logger",
]

[dependencies]
mantra-dex-std = "3.0.0"
mantrachain-std = "0.2.0"
cosmrs = { version = "0.21.1", features = ["rpc", "bip32", "cosmwasm"] }
cosmwasm-std = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
bip32 = "0.5"
bip39 = "2.0"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
hex = "0.4"
toml = "0.8"
dirs = "5.0"
base64 = "0.21"
rand = "0.8"
config = "0.15.11"
aes-gcm = "0.10"
argon2 = "0.5"
prost = "0.13.5"
prost-types = "0.13.5"
cosmos-sdk-proto = "0.26.1"
serde_bytes = "0.11.17"
regex = "1.10"

# TUI dependencies - optional via "tui" feature
ratatui = { version = "0.29.0", features = [
    "crossterm",
    "all-widgets",
], optional = true }
crossterm = { version = "0.28.1", optional = true }
tokio-util = { version = "0.7", optional = true }
tui-input = { version = "0.10", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
env_logger = { version = "0.10", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

# Note: Use cargo run --bin mantra-dex-tui --features tui to start the TUI
# Examples:
#   cargo run --bin mantra-dex-tui --features tui --help
#   cargo run --bin mantra-dex-tui --features tui --network testnet  
#   cargo run --bin mantra-dex-tui --features tui --network mainnet
