[package]
name = "mantra-dex-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Mantra DEX SDK"

[dependencies]
mantra-dex-sdk = { path = ".." }
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
cosmwasm-std = "1.5.0"
colored = "2.0"
prettytable-rs = "0.10"
dotenv = "0.15"
dialoguer = "0.11"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chacha20poly1305 = "0.10.1"
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.21.0"
rustyline = "12.0.0"
shell-words = "1.1.0"

[[bin]]
name = "mantra-dex"
path = "src/main.rs" 