[package]
name = "mantra-dex-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal User Interface for the Mantra DEX SDK"

[dependencies]
mantra-dex-sdk = { path = ".." }
tokio = { version = "1.28", features = ["full"] }
ratatui = "0.23.0"
crossterm = "0.26.1"
tui-input = "0.8.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
cosmwasm-std = "1.5.0"
colored = "2.0"
dotenv = "0.15"
dialoguer = "0.11"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chacha20poly1305 = "0.10.1"
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.21.0"

[[bin]]
name = "mantra-dex-tui"
path = "src/main.rs" 